kubernetes/apps/home/syncthing/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing.toskbot.xyz`)
      kind: Rule
      services:
        - name: syncthing
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
    - host: syncthing.toskbot.xyz
  tls:
  - hosts:
    - syncthing.toskbot.xyz
